--- a/templates/sonda.env.j2
+++ b/templates/sonda.env.j2
@@ -1,9 +1,9 @@
 METRICS_PORT={{ nim_waku_sonda_metrics_port }}
-NODE_REST_ADDRESS='{{ nim_waku_node_rest_address }}'
-CLUSTER_ID={{ nim_waku_cluster_id | mandatory }}
-SHARD={{ nim_waku_pubsub_topics | mandatory | first | split('/') | last }}
+NODE_REST_ADDRESS='{{ nim_waku_sonda_node_rest_address }}'
+CLUSTER_ID={{ nim_waku_sonda_cluster_id | mandatory }}
+SHARD={{ nim_waku_sonda_pubsub_topics | mandatory | first | split('/') | last }}
 # Comma separated list of store nodes to poll
-STORE_NODES='{{ sonda_store_nodes }}'
+STORE_NODES='{{ nim_waku_sonda_store_nodes }}'
 # Wait time in seconds between two consecutive queries
 QUERY_DELAY={{ nim_waku_sonda_query_delay }}
 # Consecutive successful store requests to consider a store node healthy
