--- a/templates/sonda.env.j2
+++ b/templates/sonda.env.j2
@@ -1,7 +1,7 @@
 METRICS_PORT={{ nim_waku_sonda_metrics_port }}
 NODE_REST_ADDRESS='{{ nim_waku_sonda_node_rest_address }}'
 CLUSTER_ID={{ nim_waku_sonda_cluster_id | mandatory }}
-SHARD={{ nim_waku_sonda_pubsub_topics | mandatory | first | split('/') | last }}
+SHARD={{ nim_waku_sonda_shard | mandatory }}
 # Comma separated list of store nodes to poll
 STORE_NODES='{{ nim_waku_sonda_store_nodes }}'
 # Wait time in seconds between two consecutive queries
