compose: add restart always
Signed-off-by: markoburcul <marko@status.im>

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -13,6 +13,7 @@ services:
       timeout: {{ healthcheck_timeout }} 
       retries: {{ healthcheck_retries }}  
     env_file: "sonda.env"
+    restart: 'always'
 {% if nim_waku_sonda_cont_network %}
     networks:
       - '{{ nim_waku_sonda_cont_network }}'
